package entity.reading;
public record ReadingDisplay (String title, String author, String text){}
